// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> renders with children 1`] = `
<div
  className="css-1hlki0z "
>
  <ReactIdSwiper
    autoplay={null}
    containerClass="sg-swiper-container css-rdsogp "
    freeMode={false}
    initialSlide={0}
    loop={false}
    nextButton={null}
    onInit={[Function]}
    onSlideChangeEnd={[Function]}
    onTouchStart={[Function]}
    onTransitionEnd={[Function]}
    onTransitionStart={[Function]}
    pagination={null}
    paginationModifierClass="sg-swiper-pagination-"
    prevButton={null}
    slideClass="sg-swiper-slide"
    slidesPerView={1}
    wrapperClass="swiper-wrapper"
  >
    <div
      className="css-1l9a57c"
      key="s0"
    >
      <SliderItem
        key="0"
      >
        <div />
      </SliderItem>
    </div>
    <div
      className="css-1l9a57c"
      key="s1"
    >
      <SliderItem
        key="1"
      >
        <div />
      </SliderItem>
    </div>
    <div
      className="css-1l9a57c"
      key="s2"
    >
      <SliderItem
        key="2"
      >
        <div />
      </SliderItem>
    </div>
  </ReactIdSwiper>
</div>
`;

exports[`<Slider /> renders with controls 1`] = `
<Slider
  autoPlay={false}
  className=""
  classNames={Object {}}
  controls={true}
  disabled={false}
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  onSlideChange={null}
  slidesPerView={1}
  snapItems={true}
>
  <div
    className="css-1hlki0z "
  >
    <ReactIdSwiper
      autoplay={null}
      containerClass="sg-swiper-container css-rdsogp "
      freeMode={false}
      initialSlide={0}
      loop={false}
      nextButton=".swiper-button-next"
      onInit={[Function]}
      onSlideChangeEnd={[Function]}
      onTouchStart={[Function]}
      onTransitionEnd={[Function]}
      onTransitionStart={[Function]}
      pagination={null}
      paginationModifierClass="sg-swiper-pagination-"
      prevButton=".swiper-button-prev"
      slideClass="sg-swiper-slide"
      slidesPerView={1}
      wrapperClass="swiper-wrapper"
    >
      <div
        className="sg-swiper-container css-rdsogp "
      >
        <div
          className="swiper-wrapper"
        >
          <div
            className="sg-swiper-slide css-1l9a57c "
            key=".$s0"
          >
            <SliderItem
              key="0"
            >
              <div
                className="css-10a4qrv"
              >
                <div />
              </div>
            </SliderItem>
          </div>
          <div
            className="sg-swiper-slide css-1l9a57c "
            key=".$s1"
          >
            <SliderItem
              key="1"
            >
              <div
                className="css-10a4qrv"
              >
                <div />
              </div>
            </SliderItem>
          </div>
          <div
            className="sg-swiper-slide css-1l9a57c "
            key=".$s2"
          >
            <SliderItem
              key="2"
            >
              <div
                className="css-10a4qrv"
              >
                <div />
              </div>
            </SliderItem>
          </div>
        </div>
        <div
          className="swiper-button-next "
        />
        <div
          className="swiper-button-prev "
        />
      </div>
    </ReactIdSwiper>
  </div>
</Slider>
`;

exports[`<Slider /> renders with indicators 1`] = `
<Slider
  autoPlay={false}
  className=""
  classNames={
    Object {
      "indicator": "indicator-class",
    }
  }
  controls={false}
  disabled={false}
  indicators={true}
  initialSlide={0}
  interval={3000}
  loop={false}
  onSlideChange={null}
  slidesPerView={1}
  snapItems={true}
>
  <div
    className="css-1hlki0z "
  >
    <ReactIdSwiper
      autoplay={null}
      containerClass="sg-swiper-container css-rdsogp "
      freeMode={false}
      initialSlide={0}
      loop={false}
      nextButton={null}
      onInit={[Function]}
      onSlideChangeEnd={[Function]}
      onTouchStart={[Function]}
      onTransitionEnd={[Function]}
      onTransitionStart={[Function]}
      pagination=".indicator-class"
      paginationModifierClass="sg-swiper-pagination-"
      prevButton={null}
      slideClass="sg-swiper-slide"
      slidesPerView={1}
      wrapperClass="swiper-wrapper"
    >
      <div
        className="sg-swiper-container css-rdsogp "
      >
        <div
          className="swiper-wrapper"
        >
          <div
            className="sg-swiper-slide css-1l9a57c "
            key=".$s0"
          >
            <SliderItem
              key="0"
            >
              <div
                className="css-10a4qrv"
              >
                <div />
              </div>
            </SliderItem>
          </div>
          <div
            className="sg-swiper-slide css-1l9a57c "
            key=".$s1"
          >
            <SliderItem
              key="1"
            >
              <div
                className="css-10a4qrv"
              >
                <div />
              </div>
            </SliderItem>
          </div>
          <div
            className="sg-swiper-slide css-1l9a57c "
            key=".$s2"
          >
            <SliderItem
              key="2"
            >
              <div
                className="css-10a4qrv"
              >
                <div />
              </div>
            </SliderItem>
          </div>
        </div>
        <div
          className="indicator-class "
        />
      </div>
    </ReactIdSwiper>
  </div>
</Slider>
`;
